# gravwll

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: fragment.frag  point.frag  point.vert  vertex.vert  vertex_old.vert
bash_scripts/: build_and_run.sh  debug.sh  tests.sh
benchmarks/include/: energy.h
benchmarks/micro/p2p/: Makefile  RESULTS.md  simple.cc
benchmarks/src/: energy.cpp
cmake/: dependencies.cmake  options.cmake  warnings.cmake
config/: config  config.conf  test.config.conf
docs/: CONVENTIONS.md  FLAGS.md  MEMORY_MANAGER.md  TODO.md
sim/: CMakeLists.txt
sim/code/: CMakeLists.txt  main.cc  main.cpp
sim/code/include/: simulation.h
sim/code/include/cfx/: cfx.h  dataSets.h
sim/code/include/cfx/settings/: settings.h
sim/code/include/core/: entrypoint.h
sim/code/include/core/bodies/: particles.h
sim/code/include/ctx/: config.h.in  ctx.h  initial_condition_generator.h  simulation_config.h  simulation_state.h
sim/code/include/ds/storage/: particleBlock.h  storage.h
sim/code/include/ds/tree/: octree.h
sim/code/include/engine/: engine.h  pairwise.h
sim/code/include/gfx/: camera.h  gfx.h  renderer.h  shader.h  vulkan_core.h  window.h
sim/code/include/gfx/core/: camera.h  input.h
sim/code/include/gfx/renderer/: base_renderer.h  camera_controller.h  particle_renderer.h  renderer.h  scene.h  uniform_data.h
sim/code/include/gfx/vulkan_core/: buffer.h  commands.h  device.h  pipeline.h  swapchain.h  types.h  utils.h
sim/code/include/memory/: blocks_arena.h  blocks_manager.h
sim/code/include/utils/: genParticles.h  generators.h  input.h  result.h
sim/code/include/utils/namespaces/: MyMath.h  error_namespace.h
sim/code/src/: simulation.cc  simulation.cpp
sim/code/src/cfx/: cfx.cpp  dataSets.cpp
sim/code/src/cfx/settings/: settings.cpp
sim/code/src/core/: entrypoint.cpp
sim/code/src/core/bodies/: particles.cpp
sim/code/src/ctx/: ctx.cc  initial_condition.cc  simulation_config.cc
sim/code/src/ds/storage/: particleBlock.cc  particleBlock.cpp  storage.cc  storage.cpp
sim/code/src/ds/tree/: octree.cc  octree.cpp
sim/code/src/engine/: engine.cpp  p2p.cc  pairwise.cpp
sim/code/src/gfx/: .gfx.cpp  __vulkan.cc  camera.cpp  gfx.cc  gfx.cpp  renderer.cpp  run_gfx.cpp  vulkan.cc  window.cc
sim/code/src/gfx/core/: camera.cc  input.cc
sim/code/src/gfx/render/: camera_controller.cc  particle_renderer.cc  renderer.cc  scene.cc
sim/code/src/gfx/renderer/: renderer.cc  vulkan_core.cc
sim/code/src/gfx/vulkan_core/: buffer.cc  command.cc  device.cc  instance.cc  pipeline.cc  shaders.cc  swapchain.cc  utils.cc
sim/code/src/memory/: blocks_arena.cc  blocks_manager.cc
sim/code/src/utils/: genParticles.cpp  generators.cc  input.cpp
sim/code/src/utils/namespaces/: MyMath.cpp
tests/: CMakeLists.txt
tests/unittests/config/: input.cc
tests/unittests/physics/: pairwise.cpp
tests/unittests/settings/: input.cpp
tests/unittests/tree/: boxes.cpp  insert.cpp  split.cpp
