cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDART_REQUIRED True)
set(gravwll_root ${CMAKE_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${gravwll_root}/bin)
project(gravwll)

include(${gravwll_root}/cmake/options.cmake)

if(ENABLE_TESTS)
  enable_testing()
  add_subdirectory(${gravwll_codebase})
  add_subdirectory(${gravwll_tests_dir})
else()
  add_subdirectory(${gravwll_codebase})
endif()
